@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.1 2007-10-31 14:26:26 nicm Exp $
+# $Id: GNUmakefile,v 1.2 2007-11-09 11:02:01 nicm Exp $
 
 .PHONY: clean
 
@@ -20,7 +20,8 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-set-option.c cmd-rename-window.c cmd-select-window.c \
       cmd-list-windows.c cmd-attach-session.c cmd-send-prefix.c \
       cmd-refresh-session.c cmd-kill-window.c cmd-list-clients.c \
-      cmd-has-session.c cmd-link-window.c cmd-unlink-window.c cmd-swap-window.c
+      cmd-has-session.c cmd-link-window.c cmd-unlink-window.c \
+      cmd-swap-window.c cmd-rename-session.c
 
 CC?= gcc
 INCDIRS+= -I. -I-
