@@ -52,7 +52,6 @@
 -- For 0.1 --------------------------------------------------------------------
 - man page
 - commands:
-	rename sessions
 	kill session (not bound by default)
 - fix most(1) problems after scrolling
 - fix mutt problems with redraw (mutt's) status line when reading mail
