@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.24 2007-10-30 11:10:33 nicm Exp $ */
+/* $Id: cmd.c,v 1.25 2007-11-09 11:02:01 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -40,6 +40,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_next_window_entry,
 	&cmd_previous_window_entry,
 	&cmd_refresh_session_entry,
+	&cmd_rename_session_entry,
 	&cmd_rename_window_entry,
 	&cmd_select_window_entry,
 	&cmd_send_prefix_entry,
